--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     </div>
                     <div class="back">
                         <ul>
-                            <li>Developed in React, Node, and MongoDB, Budget Budyy offers
+                            <li>Developed in React, Node, and MongoDB, Budget Buddy offers
                                 budgeting, expense analysis, and report download features.</li>
                             <li>
                                 The application securely stores reports using Amazon S3,
