updated style and ui correction

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 
 
-        <h2><a href="mailto:badigerabhi2000@gmail.com"></a>badigerabhi2000@gmail.com</h2>
+        <h2><a href="mailto:badigerabhi2000@gmail.com">badigerabhi2000@gmail.com</a></h2>
         <hr>
     </section>
 
@@ -136,14 +136,14 @@
                 <p>I'm a Computer Science graduate from <a href="https://vidyavikasengineering.com/"
                         target="_blank">Vidya Vikas Institute of Engineering and Technology Mysore</a>,
                     I would describe myself as an avid learner with an immense passion for technology
-                    <span></span> My skills range from Web development,<span>programming in Python</span>,
-                    <span>AWS</span>,
+                    <span></span> My skills range from Web development, <span>programming in Python</span>,
+                     <span>AWS</span>, <span>Nodejs</span>, <span>Jenkins</span>, <span>Docker</span>,<span>Ai Integration</span>, <span>Mongo DB</span>, <span>MySql</span> 
                 </p>
                 <p>I enjoy learning new skills and implementing them in real life!</p>
             </div>
             <a href="mailto:badigerabhi2000@gmail.com"><button>Reach out to me</button></a>
             <div class="img" data-aos="fade-left">
-                <img src="./images/profile-pic.png" alt="Picture of megha">
+                <img src="./images/profile-pic2.jpg" alt="Picture of megha">
             </div>
         </div>
     </div>
@@ -161,7 +161,7 @@
                 <h3>Interests</h3>
                 <div class>
                     <p>FullStack Development</p>
-                    <p>Programming in Python and Travelling</p>
+                    <p>Programming in Python ,Devops and AI</p>
                 </div>
             </div>
             <div class="btn-donload">
@@ -237,21 +237,20 @@
                 <div class="card-inner">
                     <div class="front">
                         <div class="card-poster">
-                            <img src="./images/ping-pluse.png" alt="Project 1 Image">
-                            <img src="./images/ping-pluse2.png" alt="p1" srcset="">
+                            <img src="./images/npm-cli.png" alt="Project 1 Image">
+                            <!-- <img src="./images/ping-pluse2.png" alt="p1" srcset=""> -->
                         </div>
-                        <h2>Ping-Pluse</h2>
+                        <h2>npm package</h2>
                     </div>
                     <div class="back">
                         <ul>
-                            <li>A real time chat web app built in React ,Node js,Mysql and Web sockets</li>
-                            <li>Featured with one-to-one and group messaging with secured
-                                login system,Leveraged Amazon S3 for the efficient storage
-                                and retrieval of multimedia messages</li>
+                            <li>A CLI tool to scaffold Node.js backend projects with options for JavaScript or TypeScript templates. </li>
+                            <li>Sets up a standard project structure with folders for controllers, middlewares, models, routes, and services.</li>
+                            <li>Automatically generates configuration files like .env, .gitignore, tsconfig.json, and package.json</li>
                             <div class="plink">
                                 
-                                <a href="https://github.com/codeAbhi2000/Chat_app" target="_blank" rel="noopener noreferrer"><img src="icons/github.svg" alt="github" ></a>
-                               <a href="http://pingpluse.netlify.app" target="_blank" rel="noopener noreferrer"><img src="icons/icons8-link-32.png" alt="link"></a>
+                                <a href="https://github.com/codeAbhi2000/node-create-backend-cli" target="_blank" rel="noopener noreferrer"><img src="icons/github.svg" alt="github" ></a>
+                               <a href="https://www.npmjs.com/package/create-node-backend-template" target="_blank" rel="noopener noreferrer"><img src="icons/icons8-link-32.png  " alt="link"></a>
                             </div>
                                 
                         </ul>
@@ -329,7 +328,7 @@
                 to say hello, I
                 will try my best to get back to you! Feel free to contact me about any relevant opportunity or just a
                 simple talk.</h3>
-            <a href="mailto:badigerabhi2000@gmail.com"><button>Mail Me</button></a>
+            <a href="mailto:badigerabhi2000@gmail.com"><button>Ping Me</button></a>
             <div class="socials">
                 <a href="https://www.linkedin.com/in/abhishek-badiger-a460231a2/" target="_blank"><img
                         src="icons/linkedin.svg" alt="LinkedIn"></a>
